@@ -28,6 +28,7 @@ Improved Debug CPU:
 
 Fixed semaphore locking on Windows
 Fixed cpu usage calculation when footer is disabled
+Fixed setting esxdos handler root dir when loading a .nex file without path from command line
 
 ----
 
